--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
 spring.datasource.username = root
 
-
+logging.file=logs/applog.log
 
 spring.datasource.url = jdbc:mysql://localhost/bookmarks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
