--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,8 @@
 # suppress inspection "UnusedProperty" for whole file
 spring.datasource.username = root
 
+logging.file=logs/applog.log
+
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
