--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 
         <dependency>
             <groupId>com.github.saphyra</groupId>
+            <artifactId>dao</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.saphyra</groupId>
             <artifactId>encryption</artifactId>
             <version>1.0.1</version>
         </dependency>
