--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <version>1.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.saphyra</groupId>
+            <artifactId>util</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
