--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
     <dependencies>
         <dependency>
             <groupId>com.github.saphyra</groupId>
+            <artifactId>auth-service</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.saphyra</groupId>
             <artifactId>cache</artifactId>
             <version>1.0.5</version>
         </dependency>
