Session Expired fix

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,5 @@ logging.file=logs/applog.log
 
 spring.datasource.url = jdbc:mysql://localhost/bookmarks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+logging.level.com.github.saphyra.authservice=DEBUG
